.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Nothing to build in platform 'LVDS_UART_PLATFORM'

10:57:39 **** Incremental Build of configuration Debug for project LVDS_UART_Bootloader ****
make all 
'Building file: ../src/bootloader.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/bootloader.o" -IC:/Users/mafassi/Desktop/UART_LVDS_Vitis/LVDS_UART_PLATFORM/export/LVDS_UART_PLATFORM/sw/LVDS_UART_PLATFORM/standalone_domain/bspinclude/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/bootloader.d" -MT"src/bootloader.o" -o "src/bootloader.o" "../src/bootloader.c"
../src/bootloader.c:146:2: error: excess elements in char array initializer
  146 |  "Error while copying executable image into RAM",
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/bootloader.c:146:2: note: (near initialization for 'errors')
../src/bootloader.c:147:2: error: excess elements in char array initializer
  147 |  "Error while reading an SREC line from flash",
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/bootloader.c:147:2: note: (near initialization for 'errors')
../src/bootloader.c:148:2: error: excess elements in char array initializer
  148 |  "SREC line is corrupted",
      |  ^~~~~~~~~~~~~~~~~~~~~~~~
../src/bootloader.c:148:2: note: (near initialization for 'errors')
../src/bootloader.c:149:2: error: excess elements in char array initializer
  149 |  "SREC has invalid checksum."
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/bootloader.c:149:2: note: (near initialization for 'errors')
../src/bootloader.c: In function 'main':
../src/bootloader.c:229:16: warning: passing argument 1 of 'print' makes pointer from integer without a cast [-Wint-conversion]
  229 |   print (errors[ret]);
      |          ~~~~~~^~~~~
      |                |
      |                int8_t {aka signed char}
In file included from ../src/bootloader.c:27:
c:\xilinx\vitis\2020.2\gnu\microblaze\nt\microblazeeb-xilinx-elf\usr\include\stdio.h:250:13: note: expected 'const char *' but argument is of type 'int8_t' {aka 'signed char'}
  250 | void print (const char* );
      |             ^~~~~~~~~~~
../src/bootloader.c:232:16: warning: passing argument 1 of 'print' makes pointer from integer without a cast [-Wint-conversion]
  232 |   print (errors[ret]);
      |          ~~~~~~^~~~~
      |                |
      |                int8_t {aka signed char}
In file included from ../src/bootloader.c:27:
c:\xilinx\vitis\2020.2\gnu\microblaze\nt\microblazeeb-xilinx-elf\usr\include\stdio.h:250:13: note: expected 'const char *' but argument is of type 'int8_t' {aka 'signed char'}
  250 | void print (const char* );
      |             ^~~~~~~~~~~
make: *** [src/subdir.mk:29: src/bootloader.o] Error 1
10:57:39 **** Incremental Build of configuration Debug for project Software ****
make all 
'Building file: ../src/main.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -IC:/Users/mafassi/Desktop/UART_LVDS_Vitis/LVDS_UART_PLATFORM/export/LVDS_UART_PLATFORM/sw/LVDS_UART_PLATFORM/standalone_domain/bspinclude/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
'Finished building: ../src/main.c'
' '
'Building target: Software.elf'
'Invoking: MicroBlaze gcc linker'
mb-gcc -Wl,-T -Wl,../src/lscript.ld -LC:/Users/mafassi/Desktop/UART_LVDS_Vitis/LVDS_UART_PLATFORM/export/LVDS_UART_PLATFORM/sw/LVDS_UART_PLATFORM/standalone_domain/bsplib/lib -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -Wl,--gc-sections -o "Software.elf"  ./src/main.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: Software.elf'
' '
'Invoking: MicroBlaze Print Size'
mb-size Software.elf  |tee "Software.elf.size"
   text	   data	    bss	    dec	    hex	filename
  10628	    388	   4416	  15432	   3c48	Software.elf
'Finished building: Software.elf.size'
' '
